--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <!-- Header -->
   <header class="container-fluid header_di-buffala">
     <h1>Willson Huenchulao</h1>
-    <p>commit Desafio-guiado</p>
+    <p>committ Desafio-guiado </p>
     <a class="btn button_di-buffala" href="#">Conoce Más</a>
   </header>
 
